Closed Bug 1856427 Opened 2 months ago Closed 16 days ago

After deleting two messages from a local folder, undo is required three times to bring them both back

Categories

(MailNews Core :: General, defect, P2)

Thunderbird 115

Tracking

(thunderbird_esr115 fixed, thunderbird121 fixed)

RESOLVED FIXED
122 Branch
Tracking Status
thunderbird_esr115 --- fixed
thunderbird121 --- fixed

People

(Reporter: betterbird.project+10, Assigned: mkmelin)

References

(Regression)

Details

(Keywords: regression, triaged)

Attachments

(1 file)

STR:
Local folder, delete, delete, undo, undo, undo.

Mozregression shows:
https://hg.mozilla.org/comm-central/pushloghtml?fromchange=8484dd98e2092f6e21ac50ec3f26c71b564555b2&tochange=70121c0b97d08ff1022ee44263dcd7f79da31591

Looks like there were some changes in transaction management here:
https://hg.mozilla.org/comm-central/rev/7fa895a86b552264242c797f1380d646f0ae5d4b#l10.213
leading to some extra transactions. Note that deleting a local message moves it to the trash, to likely this change is at fault:
https://hg.mozilla.org/comm-central/rev/7fa895a86b552264242c797f1380d646f0ae5d4b#l10.180

Flags: needinfo?(gds)
Keywords: regression
Regressed by: 1828372
Severity: -- → S2
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: triaged
Priority: -- → P2
Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED
Target Milestone: --- → 122 Branch

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/45fa5c550224
Fix double-undo when deleting local messages. r=gds

Status: ASSIGNED → RESOLVED
Closed: 16 days ago
Resolution: --- → FIXED

Comment on attachment 9364706 [details]
Bug 1856427 - Fix double-undo when deleting local messages. r=gds

[Approval Request Comment]
Regression caused by (bug #): bug 1828372
User impact if declined: undo doesn't work as it should
Testing completed (on c-c, etc.): c-c
Risk to taking this patch (and alternatives if risky): pretty safe, just moving code a bit

Attachment #9364706 - Flags: approval-comm-esr115?
Attachment #9364706 - Flags: approval-comm-beta?

Comment on attachment 9364706 [details]
Bug 1856427 - Fix double-undo when deleting local messages. r=gds

[Triage Comment]
Approved for beta

Attachment #9364706 - Flags: approval-comm-beta? → approval-comm-beta+

Comment on attachment 9364706 [details]
Bug 1856427 - Fix double-undo when deleting local messages. r=gds

[Triage Comment]
Approved for esr115

Attachment #9364706 - Flags: approval-comm-esr115? → approval-comm-esr115+
You need to log in before you can comment on or make changes to this bug.