Bug 1856427 - Fix double-undo when deleting local messages. r=gds

For "delete, delete, undo, undo, undo" the second undo wouldn't "take".

Based on https://github.com/Betterbird/thunderbird-patches/blob/main/115/bugs/1856427-double-undo.patch

Differential Revision: https://phabricator.services.mozilla.com/D194215

--HG--
extra : rebase_source : f8541df2391f5408431eb1936dbcb593728c1cfd
extra : amend_source : a58b5ffcfff938b86aeb7b3f4b7f008ef47ba2af